--- a/samtools/index.ipynb
+++ b/samtools/index.ipynb
@@ -38,6 +38,19 @@
    "samtools view data/example.sorted.bam | head"
   ]
  },
+ {
+  "cell_type": "markdown",
+  "metadata": {},
+  "source": [
+   "\n",
+   "| **Column**|  **Description** |\n",
+   "|-----|---|\n",
+   "|   1  | Read name  |\n",
+   "|   2  | Bitwise flag  |\n",
+   "|   3  |  Reference name |\n",
+
+  ]
+}
  ],
  "metadata": {
   "kernelspec": {
