--- a/samtools/index.ipynb
+++ b/samtools/index.ipynb
@@ -35,9 +35,35 @@
   "metadata": {},
   "outputs": [],
   "source": [
-   "samtools view data/example.sorted.bam | head"
+   "samtools view data/file.sorted.bam | head"
   ]
-  }
+ },
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+     "### Viewing specific regions\n",
+     "By default `samtools view` prints all alignments, but you can specify a specific chromosome or subregion to only print alignments in that window:\n",
+   ]
+ },
+ {
+  "cell_type": "code",
+  "execution_count": null,
+  "metadata": {},
+  "outputs": [],
+  "source": [
+   "samtools view data/file.sorted.bam 1 | head"
+  ]
+ },
+ {
+  "cell_type": "code",
+  "execution_count": null,
+  "metadata": {},
+  "outputs": [],
+  "source": [
+   "samtools view data/file.sorted.bam 1:1-1000 | head"
+  ]
+ },
  ],
  "metadata": {
   "kernelspec": {
